<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/movie_backdrop_path"
            android:layout_width="match_parent"
            android:layout_height="@dimen/movie_backdrop_image_height"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:contentDescription="@string/movie_backdrop_path_description"
            android:scaleType="centerCrop"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:contentDescription="@string/movie_poster_description"/>

            <TextView
                android:id="@+id/movie_original_title"
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/movie_poster"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/movie_release_date_label"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_original_title"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@+id/movie_poster"
                android:text="@string/activity_detail_release_date"
                android:textAllCaps="true"
                android:textColor="@color/colorSecondaryLight"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/movie_release_date"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_release_date_label"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@+id/movie_poster"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/movie_vote_average_label"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_release_date"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@+id/movie_poster"
                android:text="@string/activity_detail_rating"
                android:textAllCaps="true"
                android:textColor="@color/colorSecondaryLight"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/movie_vote_average"
                style="@style/Base.TextAppearance.AppCompat.Display1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movie_vote_average_label"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@+id/movie_poster"
                android:textColor="@android:color/white"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/movie_overview_label"
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/activity_detail_synopsis"
            android:textAllCaps="true"
            android:textColor="@color/colorSecondaryLight"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/movie_overview"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</ScrollView>